hphp/test/slow/object_property/707.php.expectf

Warning: Attempt to increment/decrement property of non-object in %s/test/slow/object_property/707.php on line 4
NULL

Warning: Attempt to increment/decrement property of non-object in %s/test/slow/object_property/707.php on line 4
NULL

Fatal error: Cannot access empty property in %s/test/slow/object_property/707.php on line 4
